[project]
name = "my-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "langchain>=1.3.14",
    "langchain-openai>=1.4.0",
    "langgraph>=1.2.9",
    "langgraph-cli[inmem]>=0.4.31",
    "python-dotenv>=1.2.2",
]
